--- a/starbuzz.css
+++ b/starbuzz.css
@@ -11,7 +11,7 @@ div#tableContainer {
 div#tableRow {
     display: table-row;
 }
-#header {
+header {
     background-color: #675c47;
     margin: 10px 10px 0px 10px;
     height: 108px;
@@ -29,28 +29,28 @@ div#tableRow {
 #coupon a, img {
     border: none;
 }
-#drinks {
+section#drinks {
     display: table-cell;
     background-color: #efe5d0;
     width: 20%;
     padding: 15px;
     vertical-align: top;
 }
-#main {
+section#main, section#blog {
     display: table-cell;
     background: #efe5d0 url(images/background.gif) top left;
     font-size: 105%;
     padding: 15px;
     vertical-align: top;
 }
-#sidebar {
+aside {
     display: table-cell;
     background: #efe5d0 url(images/background.gif) bottom right;
     font-size: 105%;
     padding: 15px;
     vertical-align: top;
 }
-#footer {
+footer {
     background-color: #675c47;
     color: #efe5d0;
     text-align: center;
@@ -59,7 +59,7 @@ div#tableRow {
     font-size: 90%;
     clear: both;
 }
-#headerSlogan {
+header img#headerSlogan {
     float: right;
 }
 h1 {
