--- a/starbuzz.css
+++ b/starbuzz.css
@@ -11,7 +11,7 @@ div#tableContainer {
 div#tableRow {
     display: table-row;
 }
-header {
+header.top {
     background-color: #675c47;
     margin: 10px 10px 0px 10px;
     height: 108px;
@@ -59,7 +59,7 @@ footer {
     font-size: 90%;
     clear: both;
 }
-header img#headerSlogan {
+header.top img#headerSlogan {
     float: right;
 }
 h1 {
@@ -80,4 +80,25 @@ a:visited {
     color: #675c47;
     text-decoration: none;
     border-bottom: thin dotted #675c47;
+}
+nav {
+    background-color: #efe5d0;
+    margin: 10px 10px 0px 10px;
+}
+nav ul {
+    margin: 0px;
+    list-style-type: none;
+    padding: 5px 0px 5px 0px;
+ }
+nav ul li {
+    display: inline;
+    padding: 5px 10px 5px 10px;
+}
+nav ul li a:link, nav ul li a:visited {
+    color: #954b4b;
+    border-bottom: none;
+    font-weight: bold;
+}
+nav ul li.selected {
+    background-color: #c8b99c;
 }
