--- a/starbuzz.css
+++ b/starbuzz.css
@@ -102,3 +102,6 @@ nav ul li a:link, nav ul li a:visited {
 nav ul li.selected {
     background-color: #c8b99c;
 }
+thead#client_form {
+    text-align: left;
+}
